--- a/interpreter/Cargo.toml
+++ b/interpreter/Cargo.toml
@@ -1,12 +1,13 @@
-[workspace]
-members = ["interpreter"]
 
 [package]
-name = "calculator-app"
+name = "interpreter"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-interpreter = { path = "interpreter" }
+rand = "0.8.5"
+spfunc = "0.1.0"
+operation = { path = "operation" }
+unicode-width = "0.1.11"
